After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 625406 - soup_message_queue_destroy: assertion `queue->head == NULL' failed
soup_message_queue_destroy: assertion `queue->head == NULL' failed
Status: RESOLVED FIXED
Product: libsoup
Classification: Core
Component: HTTP Transport
2.31.x
Other Linux
: Normal normal
: ---
Assigned To: libsoup-maint@gnome.bugs
libsoup-maint@gnome.bugs
Depends on:
Blocks:
 
 
Reported: 2010-07-27 15:47 UTC by Dan Winship
Modified: 2010-07-28 12:55 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Dan Winship 2010-07-27 15:47:59 UTC
the gstreamer http stream uses soup_session_cancel_message() in a way that triggers this warning (with libsoup master)

gst-launch-0.10 playbin2 uri="http://gstreamer.freedesktop.org/media/small/cooldance.ogg"
Setting pipeline to PAUSED ...
Pipeline is PREROLLING ...
Prerolled, waiting for buffering to finish...
Pipeline is PREROLLED ...
Setting pipeline to PLAYING ...
New clock: GstPulseSinkClock
^CCaught interrupt -- handling interrupt.
Interrupt: Stopping pipeline ...
Execution ended after 1748088362 ns.
Setting pipeline to PAUSED ...
Setting pipeline to READY ...

(gst-launch-0.10:11495): libsoup-CRITICAL **: soup_message_queue_destroy: assertion `queue->head == NULL' failed
Setting pipeline to NULL ...
Freeing pipeline ...