SoupSessionAsync: make soup_session_cancel_message behave stupidly again

The session rewrites changed cancellation in async sessions to happen
asynchronously. This makes more sense than the old behavior, but can
cause problems with code that previously assumed it could
cancel-and-forget (and it wasn't actually an intentional change
anyway). So revert that.

https://bugzilla.gnome.org/show_bug.cgi?id=625406